# optix-toolkit

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  BuildConfig.cmake  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  ChangeLog.md  FetchGtest.cmake  FetchOpenEXR.cmake  FindOptiX.cmake  ProjectOptions.cmake  README.md  embed_cuda.cmake  embed_ptx.cmake  requirements.txt  run_bin2c.cmake  vcpkg-configuration.json  vcpkg.json  vcpkg.json.in
CuOmmBaking/Simple/: CMakeLists.txt  simple.cpp
CuOmmBaking/Viewer/: CMakeLists.txt  CuOmmBakingApp.cpp  CuOmmBakingApp.h  CuOmmBakingViewer.cpp  PerDeviceOptixState.h  Procedural.h
DemandGeometry/: CMakeLists.txt  README.md  ReadMe.md
DemandGeometry/src/: ProxyInstances.cpp
DemandGeometry/tests/: CMakeLists.txt  MockDemandLoader.h  MockOptix.cpp  MockOptix.h  TestIntersectAabb.cpp  TestMatchers.cpp  TestOptixCompare.cpp  TestProxyInstances.cpp  test_intersectAabb.cpp  test_proxyInstances.cpp
DemandLoading/: .gitattributes  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md
DemandLoading/CdfInversion/: Bsdf.h  CMakeLists.txt  CdfInversion.cpp  CdfInversion.cu
DemandLoading/DemandGeometry/: CMakeLists.txt  README.md
DemandLoading/DemandGeometryViewer/: CMakeLists.txt  DemandGeometryViewer.cpp  DemandGeometryViewer.cu  DemandGeometryViewer.h  DemandMaterial.cpp  DemandMaterial.cu  DemandMaterial.h  Sphere.cu  SphereInstances.cpp  SphereInstances.h
DemandLoading/DemandLoading/: CMakeLists.txt
DemandLoading/DemandMaterial/: CMakeLists.txt  README.md
DemandLoading/DemandPbrtScene/: Application.cpp  Application.h  CMakeLists.txt  DemandPbrtScene.cu  DemandTextureCache.cpp  DemandTextureCache.h  DemandTextureCacheStatistics.h  Dependencies.h  FrameRate.h  GeometryCacheStatistics.h  IdRangePrinter.h  ImageSourceFactory.cpp  Options.cpp  Options.h  PbrtScene.cpp  PbrtScene.h  PhongMaterial.cu  Primitive.h  Sample.h  Scene.h  Statistics.cpp  Statistics.h  Traversable.h  main.cpp
DemandLoading/DemandTextureAppBase/: CMakeLists.txt
DemandLoading/DemandTextureViewer/: CMakeLists.txt  DemandTextureViewer.cpp  DemandTextureViewer.cu
DemandLoading/ImageSource/: CMakeLists.txt  README.md
DemandLoading/ImageSources/: CMakeLists.txt
DemandLoading/RayCones/: Bsdf.h  CMakeLists.txt  README.md  README.txt  RayCones.cpp  RayCones.cu  RayConesParams.h  ShapeMaker.cpp  ShapeMaker.h
DemandLoading/Simple/: CMakeLists.txt  simple.cpp
DemandLoading/StochasticTextureFiltering/: CMakeLists.txt  StochasticTextureFiltering.cpp  StochasticTextureFiltering.cu  StochasticTextureFilteringParams.h  Texture2DCubic.h  Texture2DFilters.h
DemandLoading/Texture/: CMakeLists.txt  texture.cpp  textureKernel.cu
DemandLoading/TexturePainting/: CMakeLists.txt  CanvasImage.cpp  CanvasImage.h  README.md  TexturePainting.cpp  TexturePainting.cu  TexturePaintingParams.h
DemandLoading/TextureVariantViewer/: CMakeLists.txt  README.txt  TextureVariantViewer.cpp  TextureVariantViewer.cu  TextureVariantViewer.h
DemandLoading/UdimTextureViewer/: CMakeLists.txt  UdimTextureViewer.cpp  UdimTextureViewer.cu
DemandLoading/docs/: README.md
DemandLoading/examples/: CMakeLists.txt
DemandLoading/src/: CMakeLists.txt  CascadeRequestFilter.cpp  CascadeRequestFilter.h  DemandLoaderImpl.cpp  DemandLoaderImpl.h  DemandPageLoaderImpl.cpp  DemandPageLoaderImpl.h  DeviceContextImpl.cpp  DeviceContextImpl.h  PageMappingsContext.h  PageTableManager.h  PagingSystem.cpp  PagingSystem.h  PagingSystemKernels.cpp  PagingSystemKernels.cu  PagingSystemKernels.h  RequestContext.h  RequestHandler.h  RequestProcessor.cpp  RequestQueue.cpp  RequestQueue.h  ResourceRequestHandler.cpp  ResourceRequestHandler.h  ThreadPoolRequestProcessor.cpp  ThreadPoolRequestProcessor.h  TicketImpl.h  TransferBufferDesc.h
DemandLoading/tests/: CMakeLists.txt  Config.h.in  DeferredImageLoading.cpp  DeferredImageLoadingKernels.cu  DemandLoaderTestKernels.cu  DemandLoaderTestKernels.h  DeviceConstantImage.cpp  DeviceConstantImage.h  PagingSystemTestKernels.cu  PagingSystemTestKernels.h  TestBulkMemory.cpp  TestCheckerBoardImage.cpp  TestContextSaver.cpp  TestDemandLoader.cpp  TestDemandPageLoader.cpp  TestDemandTexture.cpp  TestDeviceContextImpl.cpp  TestDeviceContextPool.cpp  TestEXRReader.cpp  TestEventPool.cpp  TestItemPool.cpp  TestPageTableManager.cpp  (+19 more)
Gui/: CMakeLists.txt  README.md
ImageSource/: CMakeLists.txt  README.md
Memory/: CHANGELOG.md  CMakeLists.txt  README.md
NeuralTextures/: CMakeLists.txt  README.md
OmmBaking/: .gitattributes  CHANGELOG.md  CMakeLists.txt  README.md
OtkCuda/: CMakeLists.txt
OtkGui/: CMakeLists.txt
OtkUtil/: CMakeLists.txt
PbrtSceneLoader/: CMakeLists.txt  GoogleLogger.cpp  PbrtApiImpl.cpp  PbrtSceneLoader.cpp  PlyReader.cpp
ShaderUtil/: .editorconfig  CMakeLists.txt  README.md
Testing/: CMakeLists.txt
Util/: CMakeLists.txt  README.md
examples/: .editorconfig  .gitattributes  CMakeLists.txt  curves.cu  curves.h  curves.py  denoiser.py  hello.py  simpleMotionBlur.cu  simpleMotionBlur.h  simpleMotionBlur.py  sphere.h  sphere.py  triangle.cu  triangle.py  vec_math.h
pbrtParser/: CMakeLists.txt  ReadMe.md
tests/: CMakeLists.txt  CuBuffer.h  CudaCheck.h  DeferredImageLoading.cpp  DeferredImageLoadingKernels.cu  DemandLoaderTestKernels.cu  DemandLoaderTestKernels.h  ErrorCheck.h  PagingSystemTestKernels.cu  SourceDir.h.in  TestAllocators.cpp  TestBinnedSuballocator.cpp  TestBuilders.cpp  TestBulkMemory.cpp  TestBulkPinnedItemPool.cpp  TestCheckerBoardImage.cpp  TestContextSaver.cpp  TestDebugLocation.cpp  TestDebugLocation.cu  TestDebugLocationParams.h  TestDemandLoader.cpp  TestDemandPageLoader.cpp  TestDemandTexture.cpp  TestDenseTexture.cpp  TestDeviceBuffer.cpp  TestDeviceContextImpl.cpp  TestDeviceContextPool.cpp  TestDeviceMemoryPools.cpp  TestDeviceMemoryPools.cu  TestDeviceMemoryPools.h  TestEXRReader.cpp  TestEventPool.cpp  TestFixedSuballocator.cpp  TestHeapSuballocator.cpp  TestItemPool.cpp  TestMemoryPool.cpp  TestOperators.cpp  TestPageTableManager.cpp  TestPagingSystem.cpp  TestPagingSystemKernels.cpp  (+23 more)
(+1325 files in other folders)
